--- a/stack.yml
+++ b/stack.yml
@@ -7,3 +7,7 @@ functions:
     lang: ruby-http
     handler: ./helloworld
     image: koffeinfrei/helloworld:latest
+  hello-crystal-http:
+    lang: crystal-http
+    handler: ./hello-crystal-http
+    image: koffeinfrei/hello-crystal-http:latest
